# Forest

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  dev.sh  index.html  kill.sh  package-lock.json  package.json  prefect_test.py  proxy-server.js  pyproject.toml  tsconfig.json  version.txt
.github/workflows/: build.yml
assets/: index-ClZiSCU3.css
backend/: app.py  requirements.txt
backend/testing/: trees.json
forest/: __init__.py  docker_commands.txt  index.html  package.json  tree.py
forest/src/: ATree.tsx  App.tsx  Layouter.tsx  entities.tsx  main.tsx
forest_client/: .env  index.html  package.json  tsconfig.json  vite.config.js
forest_client/src/: ATree.tsx  App.tsx  AppBar.tsx  Layouter.tsx  SearchBox.tsx  TreeState.tsx  appState.ts  entities.ts  index.css  main.tsx  process_tree.ts  supabase.ts  theme.tsx
forest_server/: build.js  package-lock.json  package.json  pnpm-lock.yaml
forest_server/src/: index.ts  mongoConnection.ts  nodeFactory.ts  treeMetadata.ts  treeVisitTracker.ts  userData.ts
scripts/: build.sh  dev.sh  dev_clean.sh  kill.sh
src/: ATree.tsx  App.jsx  App.tsx  Flow.jsx  Flow.tsx  FocusPage.tsx  Layouter.tsx  entities.tsx  index.css  main.tsx
src/Entities/: Tree.ts
test/: chat.py  dag.py  editor.py  expandable.py  figure_box.py  pycrdt_example.py  redirect.py  send_message.py  tex.py
test_apps/: chat.py  duplicate_tree.py  editor.py  paper_editor.py  pycrdt_example.py  redirect.py  send_message.py  show_html.py  tooltip.py  view_module.py
y-quill/: README.md  index.html  index.ts  package.json  style.css
(+107 files in other folders)
